# PeakUI

./: .gitignore  Cargo.toml  HANDOVER.md  LICENSE  MOBILE_ENGINE_HANDOVER.md  README.md  REFINEMENT_ROADMAP.md  create_pdf.py  inspect_wasm.py  pitch.html  pitch.md
apps/hub/: Cargo.toml
apps/hub/src/: app.rs  main.rs
apps/hub/src/pages/: health.rs  mod.rs  roadmap.rs  start.rs
apps/hub/src/views/: sidebar.rs
apps/showcase/: Cargo.toml  Trunk.toml  europeisk_digital_satsning.md  index.html  vercel_build.sh
apps/showcase/assets/: env.js
apps/showcase/assets/locales/en-US/: main.ftl
apps/showcase/assets/locales/nb-NO/: main.ftl
apps/showcase/src/: main.rs
crates/peak-core/: Cargo.toml
crates/peak-core/src/: app_registry.rs  app_traits.rs  icons.rs  lib.rs  models.rs  registry.rs  styles.rs  theme.rs
crates/peak-core/src/apps/: mod.rs  settings.rs  terminal.rs
crates/peak-core/src/integrations/: appimage.rs  mod.rs  network.rs  steam.rs
crates/peak-core/src/systems/: image_loader.rs  mod.rs  scanner.rs
crates/peak-core/src/utils/: assets.rs
crates/peak-icons/: Cargo.toml
crates/peak-intelligence/: Cargo.toml
crates/peak-intelligence/src/: kernel.rs  lib.rs  llm.rs  main.rs  steam.rs  voice.rs
crates/peak-intelligence/src/brain/: assistant.rs  chat.rs  directory.rs  mod.rs  model.rs  plan.rs  request.rs  settings.rs  web.rs
crates/peak-intelligence/src/brain/chat/: schema.rs
crates/peak-intelligence/src/brain/chat/schema/: decode.rs  encode.rs  old.rs
crates/peak-intelligence/src/http/: mod.rs  native.rs  wasm.rs
crates/peak-intelligence/src/mcp/: mod.rs
crates/peak-intelligence/src/terminal/: mod.rs
crates/peak-intelligence/src/tools/: fs_tools.rs  mod.rs  registry.rs  search_router.rs  search_tool.rs  system_tools.rs  terminal_tools.rs  voice_tools.rs
crates/peak-theme/: Cargo.toml
crates/peak-theme/src/: colors.rs  lib.rs  themes.rs
crates/peakui-cli/: Cargo.toml
crates/peakui-cli/src/: init.rs  lib.rs  runner.rs
docs/: PEAKUI_GUIDE.md  cloud_roadmap.md  commands.md  db_roadmap.md  hub_roadmap.md  roadmap.md  run.md  size_audit_v0.1.0.md
framework/: Cargo.toml  build.rs  build_errors.txt  check_errors.txt  check_errors_2.txt  check_errors_3.txt  check_errors_4.txt  check_output.txt  compile_errors.txt  final_check.txt
framework/assets/scripts/: generate_branding.py
framework/examples/: ai_demo.rs  landing_page.rs  motion_demo.rs  showcase.rs  showcase_tui.rs  tui_demo.rs
framework/locales/en-US/: main.ftl
framework/packaging/: Info.plist  entitlements.plist
framework/src/: accessibility.rs  alert.rs  assets.rs  atoms.rs  benchmark.rs  catalog.rs  console.rs  containers.rs  controls.rs  core.rs  dsl.rs  forms.rs  gestures.rs  layout.rs  lib.rs  macros.rs  mobile.rs  modifiers.rs  motion.rs  nav_split_view.rs  navigation.rs  scroll_view.rs  segmented_picker.rs  toolbar.rs  window_chrome.rs
framework/src/atoms/: badge.rs
framework/src/backend/: ai.rs  iced_backend.rs  mod.rs  spatial.rs  term.rs
framework/src/dev/: benchmark.rs  catalog.rs  console.rs  dsl.rs  mod.rs
framework/src/elements/: alert.rs  atoms.rs  controls.rs  forms.rs  mod.rs
framework/src/elements/atoms/: badge.rs
framework/src/engine/: accessibility.rs  gestures.rs  localization.rs  mod.rs  navigation.rs
framework/src/layout/: containers.rs  mod.rs  nav_split_view.rs  scroll_view.rs
framework/src/reference/: ai.rs  app.rs  app.rs.bak  db_bridge.rs  intelligence_bridge.rs  mod.rs  model.rs  page.rs
framework/src/reference/app/: message.rs  mod.rs  state.rs  subscription.rs  update.rs  view.rs
framework/src/reference/data/: db.rs  mod.rs  stub_db.rs
framework/src/reference/intelligence/: ai.rs  bridge.rs  exposure.rs  mcp.rs  mod.rs  protocol.rs
framework/src/reference/models/: mod.rs  result.rs
framework/src/reference/pages/: api_schema.rs  architecture.rs  button.rs  card.rs  colors.rs  community.rs  component_detail.rs  customizations.rs  divider.rs  docks.rs  hooks.rs  hstack.rs  icon.rs  image.rs  intelligence.rs  introduction.rs  landing.rs  landing_v1.rs  layout.rs  mod.rs  modal_doc.rs  navigation_split.rs  overlay.rs  peak_cloud.rs  peak_db.rs  peak_desktop.rs  peak_hub.rs  peak_os_core.rs  performance.rs  project_structure.rs  roadmap.rs  scroll_view.rs  section.rs  shapes.rs  shared.rs  side_effects.rs  sidebar_doc.rs  sizing.rs  tabbar_doc.rs  text.rs  (+5 more)
framework/src/reference/pages/components/: bar_chart.rs  button.rs  card.rs  data_table.rs  detail.rs  divider.rs  docks.rs  emoji.rs  hstack.rs  icon.rs  image.rs  inputs.rs  line_chart.rs  mod.rs  modal_doc.rs  navigation_split.rs  overlay.rs  pie_chart.rs  scroll_view.rs  section.rs  shapes.rs  sidebar_doc.rs  spacer.rs  tabbar_doc.rs  text.rs  video.rs  vstack.rs  web_view.rs  zstack.rs
framework/src/reference/pages/core/: mod.rs  peak_cloud.rs  peak_db.rs  peak_desktop.rs  peak_hub.rs  peak_os_core.rs
framework/src/reference/pages/docs/: accessibility.rs  api_schema.rs  architecture.rs  colors.rs  customizations.rs  layout.rs  mod.rs  performance.rs  project_structure.rs  side_effects.rs  sizing.rs  typography.rs
framework/src/reference/pages/guide/: community.rs  intelligence.rs  introduction.rs  mod.rs  peak_suite.rs  roadmap.rs
framework/src/reference/pages/hooks/: overview.rs
framework/src/reference/pages/landing/: mod.rs  peak_db.rs  peak_hub.rs  peak_os.rs  peak_relay.rs  peak_ui.rs
framework/src/reference/pages/settings/: about.rs  ai.rs  appearance.rs  mod.rs  scaling.rs  shortcuts.rs
framework/src/reference/views/: canvas.rs  component_doc.rs  content_view.rs  inspector.rs  mod.rs  sidebar.rs  simulator.rs  state.rs  swarm_dashboard.rs  tabbar.rs
framework/src/semantic/: mod.rs
framework/src/shell/: mobile.rs  mod.rs  toolbar.rs
framework/src/style/: mod.rs
framework/src/views/: chart.rs  chat.rs  code_block.rs  context_menu.rs  data_table.rs  markdown.rs  mod.rs
framework/tests/: backend_validation.rs  component_tests.rs  serialization.rs
scripts/: check_wasm_leaks.sh  patch_wasm.sh  setup.sh  size_audit.sh  verify_exposure.py
(+1 files in other folders)
