[package]
name = "peak-ui"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
build = "build.rs"

[build-dependencies]
dotenvy = "0.15"

[dependencies]
percent-encoding = "2.3"
log = "0.4"
peak-core = { path = "../crates/peak-core", default-features = false }
peak-theme = { path = "../crates/peak-theme", default-features = false }
peak-icons = { path = "../crates/peak-icons" }
peak-os-intelligence = { path = "../../PeakOS/crates/peak-intelligence", default-features = false }
peak-db = { path = "../../PeakOS/crates/peak-db", optional = true }
iced_widget = { version = "0.14", default-features = false, features = ["lazy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
fluent = "0.17.0"
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
fluent-langneg = "0.14.2"
intl-memoizer = "0.5.3"
async-stream = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.14", default-features = false, features = ["canvas", "advanced", "image", "svg", "lazy", "debug", "fira-sans"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.69"
console_error_panic_hook = "0.1"
console_log = "1.0"
web-sys = { version = "0.3.69", features = ["Window", "Document", "HtmlCanvasElement", "Element", "Location", "HtmlIFrameElement", "CssStyleDeclaration"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
iced_winit = { version = "0.14", default-features = false }
iced_graphics = { version = "0.14", default-features = false }
once_cell = "1.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { version = "0.14", features = ["canvas", "advanced", "image", "svg", "lazy", "debug", "fira-sans", "wgpu", "tokio"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
wry = { version = "0.47", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.4"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSVisualEffectView", "NSWindow", "NSApplication", "NSView", "NSResponder"] }
objc2-foundation = "0.2"
raw-window-handle = "0.6"

[features]
default = []
native = [
    "tokio",
    "iced/wgpu",
    "iced/tokio",
    "peak-db",
    "peak-core/native",
    "peak-theme/native",
    "peak-os-intelligence/native",
    "peak-os-intelligence/llm"
]
tokio = ["iced/tokio"]
wasm = ["iced/canvas", "peak-core/wasm", "peak-theme/wasm"]
webview = ["wry"]
