[package]
name = "peak-suite-hub"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"

[dependencies]
peak-ui = { path = "../../framework", default-features = false }
iced = { version = "0.14", default-features = false, features = ["canvas", "advanced", "image", "svg", "lazy", "debug", "fira-sans"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
peak-core = { path = "../../crates/peak-core", default-features = false }
peak-theme = { path = "../../crates/peak-theme", default-features = false }

# Future bridges
peak_db = { path = "../../../PeakDB" }
peak_cloud = { path = "../../../PeakCloud" }
peak-os-intelligence = { path = "../../../PeakOS/crates/peak-intelligence", default-features = false, features = ["llm"] }

[features]
default = ["native"]
native = [
    "peak-ui/native",
    "iced/wgpu",
]
