[package]
name = "peak-ui-showcase"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"

[dependencies]
peak-ui = { path = "../../framework", default-features = false }
iced = { version = "0.13", default-features = false, features = ["canvas", "advanced", "image", "svg", "lazy", "debug", "fira-sans"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.69"
console_error_panic_hook = "0.1"
console_log = "1.0"
web-sys = { version = "0.3.69", features = ["Window", "Document", "HtmlCanvasElement", "Element", "Location"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"

[features]
default = ["native"]
native = [
    "peak-ui/native",
    "iced/wgpu",
]
wasm = [
    "peak-ui/wasm",
    "iced/webgl",
    "iced/canvas",
    "iced/wgpu",
]
