[package]
name = "peak-ui-showcase"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"

[dependencies]
peak-ui = { path = "../../framework", default-features = false }
iced = { version = "0.14", default-features = false, features = ["canvas", "advanced", "image", "svg", "lazy", "debug", "fira-sans"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.69"
console_error_panic_hook = "0.1"
console_log = "1.0"
web-sys = { version = "0.3.69", features = ["Window", "Document", "HtmlCanvasElement", "Element", "Location"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
dotenvy = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSImage"] }
objc2-foundation = "0.2"
window-vibrancy = "0.4"
muda = "0.15"
tray-icon = "0.19"
raw-window-handle = "0.6"

[features]
default = []
native = [
    "peak-ui/native",
    "iced/wgpu",
]
wasm = [
    "peak-ui/wasm",
    "iced/canvas",
    "iced/wgpu",
]
tui = [
    "peak-ui/tui",
]
