[package]
name = "peak-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.4"
regex = "1.10"
chrono = "0.4"
thiserror = "1.0"
peak-icons = { path = "../peak-icons" }
directories = { version = "5.0", optional = true }
dirs = { version = "5.0", optional = true }
sysinfo = { version = "0.30", optional = true }
opener = { version = "0.6", optional = true }
portable-pty = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { version = "0.14", features = ["canvas", "advanced", "image", "svg", "tokio", "wgpu"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
directories = "5.0"
dirs = "5.0"
peak-intelligence = { path = "../peak-intelligence", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.14", default-features = false, features = ["canvas", "advanced", "image", "svg"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
web-sys = { version = "0.3", features = [
    "Request", "RequestInit", "RequestMode",
    "Response", "Window", "Headers"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = []
native = ["directories", "dirs", "sysinfo", "opener", "portable-pty", "tokio", "iced/tokio", "iced/wgpu"]
wasm = []
directories = ["dep:directories"]
tokio = ["dep:tokio"]
