[package]
name = "peak-intelligence"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full", "fs", "io-util", "process", "time"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sysinfo = { version = "0.30", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"

once_cell = "1.18"
portable-pty = { version = "0.8", optional = true }
walkdir = { version = "2.4", optional = true }

# Icebreaker Core Dependencies
decoder = "0.0.3"
directories = { version = "6.0", optional = true }
function = "0.2"
futures = "0.3"
log = "0.4"
scraper = "0.22"
sipper = "0.1"
thiserror = "1.0"
toml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["io-util"], optional = true }
url = { version = "2.5", features = ["serde"] }
urlencoding = "2.1"
uuid = { version = "1.10", features = ["v4", "serde", "js"] }

# Git Dependency (Optional - causes issues on Alpine/musl)
llama-server = { git = "https://github.com/hecrj/llama-server.git", rev = "e7e016577ce11ff419628f5eca23732949990894", optional = true }

# Voice Integration (Optional)
whisper-rs = { version = "0.13", optional = true }
tts = { version = "0.26", optional = true }
cpal = { version = "0.15", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks", "gzip", "stream"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"
] }
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[features]
default = ["native", "llm"]
native = ["tokio", "sysinfo", "portable-pty", "walkdir", "directories", "tokio-stream"]
llm = ["llama-server"]
voice = ["whisper-rs", "tts", "cpal"]
wasm = []
