[package]
name = "peak-theme"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", default-features = false, features = ["advanced"] }
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
peak-core = { path = "../peak-core", default-features = false }

[features]
default = []
native = ["peak-core/native"]
wasm = ["peak-core/wasm"]
