[package]
name = "peakui-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for PeakUI project management and execution"

[[bin]]
name = "cargo-peakui"
path = "src/bin/cargo-peakui.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
anyhow = "1.0"
cargo_metadata = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
fs_extra = "1.3"
tempfile = "3.10"
indicatif = "0.17"
tokio = { version = "1.38", features = ["full"] }
colored = "2.1"
